// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app nested should update workspace.json 1`] = `
Object {
  "architect": Object {
    "build": Object {
      "builder": "@angular-devkit/build-angular:browser",
      "configurations": Object {
        "development": Object {
          "buildOptimizer": false,
          "extractLicenses": false,
          "namedChunks": true,
          "optimization": false,
          "sourceMap": true,
          "vendorChunk": true,
        },
        "production": Object {
          "budgets": Array [
            Object {
              "maximumError": "1mb",
              "maximumWarning": "500kb",
              "type": "initial",
            },
            Object {
              "maximumError": "4kb",
              "maximumWarning": "2kb",
              "type": "anyComponentStyle",
            },
          ],
          "fileReplacements": Array [
            Object {
              "replace": "apps/my-dir/my-app/src/environments/environment.ts",
              "with": "apps/my-dir/my-app/src/environments/environment.prod.ts",
            },
          ],
          "outputHashing": "all",
        },
      },
      "defaultConfiguration": "production",
      "options": Object {
        "assets": Array [
          "apps/my-dir/my-app/src/favicon.ico",
          "apps/my-dir/my-app/src/assets",
        ],
        "index": "apps/my-dir/my-app/src/index.html",
        "main": "apps/my-dir/my-app/src/main.ts",
        "outputPath": "dist/apps/my-dir/my-app",
        "polyfills": "apps/my-dir/my-app/src/polyfills.ts",
        "scripts": Array [],
        "styles": Array [
          "apps/my-dir/my-app/src/styles.css",
        ],
        "tsConfig": "apps/my-dir/my-app/tsconfig.app.json",
      },
    },
    "extract-i18n": Object {
      "builder": "@angular-devkit/build-angular:extract-i18n",
      "options": Object {
        "browserTarget": "my-dir-my-app:build",
      },
    },
    "lint": Object {
      "builder": "@nrwl/linter:eslint",
      "options": Object {
        "lintFilePatterns": Array [
          "apps/my-dir/my-app/src/**/*.ts",
          "apps/my-dir/my-app/src/**/*.html",
        ],
      },
    },
    "serve": Object {
      "builder": "@angular-devkit/build-angular:dev-server",
      "configurations": Object {
        "development": Object {
          "browserTarget": "my-dir-my-app:build:development",
        },
        "production": Object {
          "browserTarget": "my-dir-my-app:build:production",
        },
      },
      "defaultConfiguration": "development",
    },
    "test": Object {
      "builder": "@nrwl/jest:jest",
      "options": Object {
        "jestConfig": "apps/my-dir/my-app/jest.config.js",
        "passWithNoTests": true,
      },
      "outputs": Array [
        "coverage/apps/my-dir/my-app",
      ],
    },
  },
  "prefix": "proj",
  "projectType": "application",
  "root": "apps/my-dir/my-app",
  "sourceRoot": "apps/my-dir/my-app/src",
}
`;

exports[`app nested should update workspace.json 2`] = `
Object {
  "architect": Object {
    "e2e": Object {
      "builder": "@nrwl/cypress:cypress",
      "configurations": Object {
        "production": Object {
          "devServerTarget": "my-dir-my-app:serve:production",
        },
      },
      "options": Object {
        "cypressConfig": "apps/my-dir/my-app-e2e/cypress.json",
        "devServerTarget": "my-dir-my-app:serve:development",
        "tsConfig": "apps/my-dir/my-app-e2e/tsconfig.e2e.json",
      },
    },
    "lint": Object {
      "builder": "@nrwl/linter:eslint",
      "options": Object {
        "lintFilePatterns": Array [
          "apps/my-dir/my-app-e2e/**/*.{js,ts}",
        ],
      },
    },
  },
  "projectType": "application",
  "root": "apps/my-dir/my-app-e2e",
  "sourceRoot": "apps/my-dir/my-app-e2e/src",
}
`;

exports[`app not nested should update workspace.json 1`] = `
Object {
  "architect": Object {
    "build": Object {
      "builder": "@angular-devkit/build-angular:browser",
      "configurations": Object {
        "development": Object {
          "buildOptimizer": false,
          "extractLicenses": false,
          "namedChunks": true,
          "optimization": false,
          "sourceMap": true,
          "vendorChunk": true,
        },
        "production": Object {
          "budgets": Array [
            Object {
              "maximumError": "1mb",
              "maximumWarning": "500kb",
              "type": "initial",
            },
            Object {
              "maximumError": "4kb",
              "maximumWarning": "2kb",
              "type": "anyComponentStyle",
            },
          ],
          "fileReplacements": Array [
            Object {
              "replace": "apps/my-app/src/environments/environment.ts",
              "with": "apps/my-app/src/environments/environment.prod.ts",
            },
          ],
          "outputHashing": "all",
        },
      },
      "defaultConfiguration": "production",
      "options": Object {
        "assets": Array [
          "apps/my-app/src/favicon.ico",
          "apps/my-app/src/assets",
        ],
        "index": "apps/my-app/src/index.html",
        "main": "apps/my-app/src/main.ts",
        "outputPath": "dist/apps/my-app",
        "polyfills": "apps/my-app/src/polyfills.ts",
        "scripts": Array [],
        "styles": Array [
          "apps/my-app/src/styles.css",
        ],
        "tsConfig": "apps/my-app/tsconfig.app.json",
      },
    },
    "extract-i18n": Object {
      "builder": "@angular-devkit/build-angular:extract-i18n",
      "options": Object {
        "browserTarget": "my-app:build",
      },
    },
    "lint": Object {
      "builder": "@nrwl/linter:eslint",
      "options": Object {
        "lintFilePatterns": Array [
          "apps/my-app/src/**/*.ts",
          "apps/my-app/src/**/*.html",
        ],
      },
    },
    "serve": Object {
      "builder": "@angular-devkit/build-angular:dev-server",
      "configurations": Object {
        "development": Object {
          "browserTarget": "my-app:build:development",
        },
        "production": Object {
          "browserTarget": "my-app:build:production",
        },
      },
      "defaultConfiguration": "development",
    },
    "test": Object {
      "builder": "@nrwl/jest:jest",
      "options": Object {
        "jestConfig": "apps/my-app/jest.config.js",
        "passWithNoTests": true,
      },
      "outputs": Array [
        "coverage/apps/my-app",
      ],
    },
  },
  "prefix": "proj",
  "projectType": "application",
  "root": "apps/my-app",
  "sourceRoot": "apps/my-app/src",
}
`;

exports[`app not nested should update workspace.json 2`] = `
Object {
  "architect": Object {
    "e2e": Object {
      "builder": "@nrwl/cypress:cypress",
      "configurations": Object {
        "production": Object {
          "devServerTarget": "my-app:serve:production",
        },
      },
      "options": Object {
        "cypressConfig": "apps/my-app-e2e/cypress.json",
        "devServerTarget": "my-app:serve:development",
        "tsConfig": "apps/my-app-e2e/tsconfig.e2e.json",
      },
    },
    "lint": Object {
      "builder": "@nrwl/linter:eslint",
      "options": Object {
        "lintFilePatterns": Array [
          "apps/my-app-e2e/**/*.{js,ts}",
        ],
      },
    },
  },
  "projectType": "application",
  "root": "apps/my-app-e2e",
  "sourceRoot": "apps/my-app-e2e/src",
}
`;
